# SynFinance

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  alembic.ini  docker-compose.yml  fix_imports.py  pyproject.toml  pytest.ini  requirements.txt  restore_files.py  setup.cfg  setup.py
.github/workflows/: benchmark.yml  cd.yml  ci.yml
config/: default.yaml  development.yaml  production.yaml  staging.yaml  test.yaml
docs/: INDEX.md  ORGANIZATION.md  RECOVERY_REPORT_OCT21.md  REORGANIZATION_OCT21.md  STRUCTURE.md  WEEK7_DAY3_COMPLETE.md
docs/archive/: PROJECT_STRUCTURE.md  PROJECT_VALIDATION.md  README.md  RECOVERY_STATUS.md  REFACTORING_COMPLETE.md
docs/guides/: INTEGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  WEEK1_GUIDE.md
docs/planning/: ASSESSMENT_SUMMARY.md  BUSINESS_PLAN.md  ROADMAP.md  WEEK6_DETAILED_PLAN.md  WEEK7_DETAILED_PLAN.md
docs/progress/: DOCUMENTATION_REORGANIZATION_OCT21.md  ENTERPRISE_READINESS_OCT21.md  INDEX.md  README.md  STRUCTURE_REORGANIZATION_COMPLETE.md  WEEK7_DAY1_COMPLETE.md  WEEK7_DAY1_FILES_CHANGED.md  WEEK7_DAY1_VALIDATION.md  WEEK7_DAY2_COMPLETE.md
docs/technical/: ANOMALY_PATTERNS.md  ARCHITECTURE.md  CHANGES.md  DESIGN_GUIDE.md  ENTERPRISE_READINESS.md  INDEX.md  ML_DATASET_GUIDE.md  ML_FEATURES.md  MONITORING_SYSTEM.md
examples/: README.md  analyze_anomaly_patterns.py  analyze_fraud_patterns.py  api_demo.py  api_integration_example.py  batch_processing_example.py  complete_ml_pipeline.py  demo_all_fraud_patterns.py  demo_analytics_dashboard.py  demo_observability.py  demo_qa_framework.py  fraud_detection_tutorial.ipynb  fraud_detection_tutorial.py  generate_anomaly_dataset.py  generate_anomaly_ml_features.py  generate_combined_features.py  generate_fraud_training_data.py  monitoring_demo.py  optimize_fraud_models.py  performance_demo.py  real_time_monitoring.py  run_customer_test.py  train_fraud_detector.py
migrations/: env.py
monitoring/grafana/: dashboards.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
output/: variance_report.txt
output/analytics/: fraud_detection_dashboard.html
output/qa_demo/: batch_summary.txt  pipeline_summary_20251029_193920.txt
scripts/: README.md  analyze_correlations.py  analyze_variance.py  deploy.sh  generate_week3_dataset.py  health_check.sh  refactor_script.py  rollback.sh  run.bat  run.sh  validate_data_quality.py
src/: __init__.py  app.py  config.py  customer_generator.py  customer_profile.py  data_generator.py
src/analytics/: __init__.py  advanced_analytics.py  dashboard.py  visualization.py
src/api/: __init__.py  api_client.py  api_server.py  fraud_detection_api.py
src/cli/: __init__.py  config_cli.py  database_commands.py  generate_commands.py  main_cli.py  model_commands.py  system_commands.py
src/config/: __init__.py  config_manager.py  env_loader.py  hot_reload.py
src/database/: __init__.py  db_manager.py  models.py  repositories.py
src/generators/: __init__.py  advanced_schema_generator.py  anomaly_analysis.py  anomaly_ml_features.py  anomaly_patterns.py  combined_ml_features.py  fraud_network.py  fraud_patterns.py  geographic_generator.py  merchant_generator.py  ml_dataset_generator.py  ml_features.py  temporal_generator.py  transaction_core.py
src/ml/: __init__.py  model_optimization.py  model_registry.py
src/models/: __init__.py  transaction.py
src/monitoring/: __init__.py  business_metrics.py  metrics_middleware.py  prometheus_exporter.py
src/observability/: __init__.py  inspector.py  profiling.py  structured_logger.py
src/performance/: __init__.py  benchmarks.py  cache_manager.py  parallel_generator.py  streaming_generator.py
src/quality/: __init__.py  data_quality_checker.py  qa_pipeline.py  quality_gates.py
src/resilience/: __init__.py  circuit_breaker.py  health_checker.py  rate_limiter.py  retry_handler.py
src/utils/: __init__.py  geographic_data.py  indian_data.py  indian_data.py.bak  merchant_data.py
tests/: README.md  test_resilience.py
tests/analytics/: __init__.py  test_advanced_analytics.py  test_dashboard.py  test_visualization.py
tests/api/: __init__.py  test_fraud_detection_api.py
tests/cli/: __init__.py  test_cli_commands.py
tests/config/: __init__.py  test_config_manager.py  (+2 more)
(+91 files in other folders)
